<resources>
    <string name="app_name">Three In One</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="timer">Timer</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="scientific_calculator">Scientific Calculator</string>
    <string name="enter_number">Enter a number first</string>
    <string name="invalid_input">Invalid input</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="counter">Counter</string>
    <string name="equals_to">equals to</string>
    <string name="select_a_unit">Select a unit</string>
    <string name="api_error">Service error, sorry for the inconvenience</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string-array name="angle">
        <item>@string/degree</item>
        <item>@string/radian</item>
        <item>@string/grad</item>
        <item>@string/arcsecond</item>
        <item>@string/arcminute</item>
    </string-array>
    <string-array name="area">
        <item>@string/acre</item>
        <item>@string/are</item>
        <item>@string/decare</item>
        <item>@string/hectare</item>
        <item>@string/square_foot</item>
        <item>@string/square_millimeter</item>
        <item>@string/square_centimeter</item>
        <item>@string/square_decimeter</item>
        <item>@string/square_meter</item>
        <item>@string/square_hectometer</item>
        <item>@string/square_kilometer</item>
        <item>@string/square_mile</item>
        <item>@string/square_yard</item>
        <item>@string/square_inch</item>
    </string-array>
    <string-array name="currency">
        <item>@string/argentine_peso</item>
        <item>@string/australian_dollar</item>
        <item>@string/azerbaijan_manat</item>
        <item>@string/bahraini_dinar</item>
        <item>@string/brazilian_real</item>
        <item>@string/british_pound</item>
        <item>@string/bulgarian_lev</item>
        <item>@string/canadian_dollar</item>
        <item>@string/chinese_yuan_renminbi</item>
        <item>@string/croatian_kuna</item>
        <item>@string/czech_koruna</item>
        <item>@string/danish_krone</item>
        <item>@string/emirati_dirham</item>
        <item>@string/euro</item>
        <item>@string/hong_Kong_dollar</item>
        <item>@string/hungarian_forint</item>
        <item>@string/iceland_krona</item>
        <item>@string/indian_rupee</item>
        <item>@string/indonesian_rupiah</item>
        <item>@string/israeli_new_shekel</item>
        <item>@string/japanese_yen</item>
        <item>@string/kuwaiti_dinar</item>
        <item>@string/malaysian_ringgit</item>
        <item>@string/mexican_peso</item>
        <item>@string/new_zealand_dollar</item>
        <item>@string/norwegian_kroner</item>
        <item>@string/philippine_peso</item>
        <item>@string/polish_zloty</item>
        <item>@string/qatari_rial</item>
        <item>@string/romanian_new_lei</item>
        <item>@string/russian_rouble</item>
        <item>@string/singapore_dollar</item>
        <item>@string/south_african_rand</item>
        <item>@string/south_korean_won</item>
        <item>@string/swedish_krona</item>
        <item>@string/swiss_franc</item>
        <item>@string/thai_baht</item>
        <item>@string/turkish_lira</item>
        <item>@string/us_dollar</item>
        <item>@string/bitcoin</item>
    </string-array>
    <string-array name="data">
        <item>@string/bit</item>
        <item>@string/megabit</item>
        <item>@string/sbyte</item>
        <item>@string/Kilobyte</item>
        <item>@string/megabyte</item>
        <item>@string/gigabyte</item>
        <item>@string/terabyte</item>
        <item>@string/petabyte</item>
    </string-array>
    <string-array name="energy">
        <item>@string/joule</item>
        <item>@string/kilojoule</item>
        <item>@string/calorie</item>
        <item>@string/kilocalorie</item>
    </string-array>
    <string-array name="force">
        <item>@string/newton</item>
        <item>@string/kilonewton</item>
        <item>@string/meganewton</item>
        <item>@string/pond</item>
    </string-array>
    <string-array name="length">
        <item>@string/nanometer</item>
        <item>@string/micrometer</item>
        <item>@string/millimeter</item>
        <item>@string/centimeter</item>
        <item>@string/decimeter</item>
        <item>@string/meter</item>
        <item>@string/kilometer</item>
        <item>@string/mile</item>
        <item>@string/nautical_mile</item>
        <item>@string/foot</item>
        <item>@string/yard</item>
        <item>@string/inch</item>
        <item>@string/light_year</item>
    </string-array>
    <string-array name="power">
        <item>@string/watt</item>
        <item>@string/kilowatt</item>
        <item>@string/megawatt</item>
        <item>@string/gigawatt</item>
        <item>@string/terawatt</item>
        <item>@string/petawatt</item>
        <item>@string/horsepower</item>
        <item>@string/ton_of_refrigeration</item>
        <item>@string/british_thermal_unit</item>
    </string-array>
    <string-array name="pressure">
        <item>@string/millibar</item>
        <item>@string/bar</item>
        <item>@string/psi</item>
        <item>@string/ksi</item>
        <item>@string/pascal</item>
        <item>@string/hectopascal</item>
        <item>@string/kilopascal</item>
        <item>@string/megapascal</item>
        <item>@string/gigapascal</item>
    </string-array>
    <string-array name="speed">
        <item>@string/meter_second</item>
        <item>@string/meter_minute</item>
        <item>@string/meter_hour</item>
        <item>@string/kilometer_second</item>
        <item>@string/kilometer_minute</item>
        <item>@string/kilometer_hour</item>
        <item>@string/mile_second</item>
        <item>@string/mile_minute</item>
        <item>@string/mile_hour</item>
        <item>@string/foot_second</item>
        <item>@string/foot_minute</item>
        <item>@string/foot_hour</item>
        <item>@string/yard_second</item>
        <item>@string/yard_minute</item>
        <item>@string/yard_hour</item>
        <item>@string/knot</item>
        <item>@string/mach</item>
        <item>@string/speed_of_light</item>
    </string-array>
    <string-array name="temperature">
        <item>@string/celsius</item>
        <item>@string/fahrenheit</item>
        <item>@string/kelvin</item>
        <item>@string/rankine</item>
        <item>@string/reaumur</item>
    </string-array>
    <string-array name="time">
        <item>@string/nanosecond</item>
        <item>@string/microsecond</item>
        <item>@string/millisecond</item>
        <item>@string/second</item>
        <item>@string/minute</item>
        <item>@string/hour</item>
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
    </string-array>
    <string-array name="volume">
        <item>@string/cubic_millimeter</item>
        <item>@string/cubic_centimeter</item>
        <item>@string/cubic_decimeter</item>
        <item>@string/cubic_meter</item>
        <item>@string/cubic_kilometer</item>
        <item>@string/milliliter</item>
        <item>@string/centiliter</item>
        <item>@string/deciliter</item>
        <item>@string/liter</item>
        <item>@string/hectoliter</item>
        <item>@string/kiloliter</item>
        <item>@string/cup</item>
        <item>@string/gallon</item>
    </string-array>
    <string-array name="weight">
        <item>@string/microgram</item>
        <item>@string/milligram</item>
        <item>@string/gram</item>
        <item>@string/hectogram</item>
        <item>@string/kilogram</item>
        <item>@string/pound</item>
        <item>@string/ounce</item>
        <item>@string/carat</item>
        <item>@string/grain</item>
        <item>@string/metric_ton</item>
        <item>@string/long_ton</item>
        <item>@string/short_ton</item>
    </string-array>
    <string name="degree">Degree (°)</string>
    <string name="radian">Radian (rad)</string>
    <string name="grad">Grad (gon)</string>
    <string name="arcsecond">Arcsecond (″)</string>
    <string name="arcminute">Arcminute (\')</string>
    <string-array name="angle_abb">
        <item>°</item>
        <item>rad</item>
        <item>gon</item>
        <item>″</item>
        <item>\'</item>
    </string-array>
    <string name="acre">Acre (ac)</string>
    <string name="are">Are (a)</string>
    <string name="decare">Decare (daa)</string>
    <string name="hectare">Hectare (ha)</string>
    <string name="square_foot">Square foot (ft²)</string>
    <string name="square_millimeter">Square millimeter (mm²)</string>
    <string name="square_centimeter">Square centimeter (cm²)</string>
    <string name="square_decimeter">Square decimeter (dm²)</string>
    <string name="square_meter">Square meter (m²)</string>
    <string name="square_hectometer">Square hectometer (hm²)</string>
    <string name="square_kilometer">Square kilometer (km²)</string>
    <string name="square_mile">Square mile (mi²)</string>
    <string name="square_yard">Square yard (yd²)</string>
    <string name="square_inch">Square inch (in²)</string>
    <string-array name="area_abb">
        <item>ac</item>
        <item>a</item>
        <item>daa</item>
        <item>ha</item>
        <item>ft²</item>
        <item>mm²</item>
        <item>cm²</item>
        <item>dm²</item>
        <item>m²</item>
        <item>hm²</item>
        <item>km²</item>
        <item>mi²</item>
        <item>yd²</item>
        <item>in²</item>
    </string-array>
    <string name="argentine_peso">Argentine Peso (ARS)</string>
    <string name="australian_dollar">Australian Dollar (AUD)</string>
    <string name="azerbaijan_manat">Azerbaijan Manat (AZN)</string>
    <string name="bahraini_dinar">Bahraini Dinar (BHD)</string>
    <string name="brazilian_real">Brazilian Real (BRL)</string>
    <string name="british_pound">British Pound (GBP)</string>
    <string name="bulgarian_lev">Bulgarian Lev (BGN)</string>
    <string name="canadian_dollar">Canadian Dollar (CAD)</string>
    <string name="chinese_yuan_renminbi">Chinese Yuan Renminbi (CNY)</string>
    <string name="croatian_kuna">Croatian Kuna (HRK)</string>
    <string name="czech_koruna">Czech Koruna (CZK)</string>
    <string name="danish_krone">Danish Krone (DKK)</string>
    <string name="emirati_dirham">Emirati Dirham (AED)</string>
    <string name="euro">Euro (EUR)</string>
    <string name="hong_Kong_dollar">Hong Kong Dollar (HKD)</string>
    <string name="hungarian_forint">Hungarian Forint (HUF)</string>
    <string name="iceland_krona">Iceland Krona (ISK)</string>
    <string name="indian_rupee">Indian Rupee (INR)</string>
    <string name="indonesian_rupiah">Indonesian Rupiah (IDR)</string>
    <string name="israeli_new_shekel">Israeli New Shekel (ILS)</string>
    <string name="japanese_yen">Japanese Yen (JPY)</string>
    <string name="kuwaiti_dinar">Kuwaiti Dinar (KWD)</string>
    <string name="malaysian_ringgit">Malaysian Ringgit (MYR)</string>
    <string name="mexican_peso">Mexican Peso (MXN)</string>
    <string name="new_zealand_dollar">New Zealand Dollar (NZD)</string>
    <string name="norwegian_kroner">Norwegian Kroner (NOK)</string>
    <string name="philippine_peso">Philippine Peso (PHP)</string>
    <string name="polish_zloty">Polish Zloty (PLN)</string>
    <string name="qatari_rial">Qatari Rial (QAR)</string>
    <string name="romanian_new_lei">Romanian New Lei (RON)</string>
    <string name="russian_rouble">Russian Rouble (RUB)</string>
</resources>